language/move-lang/tests/move_check/parser/spec_parsing_quantifier_fail.move
module M {
    spec module {
        invariant forall x: num y: num : x == y;
    }
}
